<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CautionActivity">

    <TextView
        android:id="@+id/tv_caution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:fontFamily="@font/titilliumweb_bold"
        android:text="@string/title_caution"
        android:textAlignment="center"
        android:textColor="@color/blue_purple"
        android:textSize="32sp"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="270dp"
        android:layout_height="230dp"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="44dp"
        android:src="@drawable/landing_page1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_caution" />

    <LinearLayout
        android:id="@+id/linearLayout_caution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_point1"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/shape_circle_dark_grey"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/point1"
                android:textColor="@color/black_grey"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_point2"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/shape_circle_dark_grey"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/point2"
                android:textColor="@color/black_grey"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_point3"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/shape_circle_dark_grey"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/point3"
                android:textColor="@color/black_grey"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_point4"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/shape_circle_dark_grey"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/point4"
                android:textColor="@color/black_grey"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_point5"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/shape_circle_dark_grey"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/point5"
                android:textColor="@color/black_grey"
                android:textSize="15sp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_starttest"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/shape_rectangle_purple"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/btn_start"

        android:textColor="@color/black_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_caution"
        app:layout_constraintStart_toStartOf="@+id/tv_caution"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_caution" />


</androidx.constraintlayout.widget.ConstraintLayout>